# audibleismissing

./: .gitignore  Dockerfile  Dockerfile-dev  README.md  build.sh  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-image.yml
.kilocode/rules/: project_rules.md
app/: __init__.py
app/app_helpers/audibleapi/: api.py  audibleapi_api.py  audibleapi_functions.py  audibleapi_helpers.py  auth.py  functions.py  funtions.py  helpers.py
app/app_helpers/audimeta/: audimeta_api.py  audimeta_functions.py  audimeta_helpers.py
app/app_helpers/audiobookshelf/: abs_helpers.py  api.py  audiobookshelf_api.py  audiobookshelf_functions.py  audiobookshelf_helpers.py
app/app_helpers/audnexus/: audnexus_api.py  audnexus_functions.py  audnexus_helpers.py
app/app_helpers/fastapi_utils/: fastapi_response_codes.py  fastapi_tasks.py
app/custom_objects/: author.py  book.py  bookwishlistitem.py  genre.py  narrator.py  series.py  serieswatchlistitem.py  settings.py
app/db_models/: db_helpers.py
app/response_models/: author_response.py  book.py  book_response.py  bookwishlist_response.py  genre_response.py  narrator_response.py  series.py  series_response.py  series_view.py  serieswatchlist_response.py
app/routers/: route_tags.py
app/services/: sqlite.py  task_manager.py
app/templates/: base.html  book_details.html  book_list.html  book_wish_list.html  index.html  series_details.html  series_list.html  series_watch_list.html  settings.html
docker/: Dockerfile-dev  Dockerfile-fastapi  compose-dev.yaml  compose.yaml  example.env
(+40 files in other folders)
