[project]
name = "audibleismissing-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.1",
    "audible>=0.10.0",
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.121.3",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "sqlmodel>=0.0.27",
    "toml>=0.10.2",
]
